Fix: bigger sidebar button - closed on small screens - ready for Heroku

--- a/src/app/modules/chatpage/components/chat-main/chat-main.scss
+++ b/src/app/modules/chatpage/components/chat-main/chat-main.scss
@@ -55,12 +55,12 @@
       &__button {
         button {
           position: absolute;
-          left: -30px;
+          left: -45px;
           top: 0px;
           display: flex;
           justify-content: center;
           align-items: center;
-          width: 60px;
+          width: 90px;
           height: 40px;
           padding: 0px;
           border-radius: 50px;
@@ -76,7 +76,7 @@
 
           svg {
             position: relative;
-            left: -15px;
+            left: -25px;
             width: 20px;
             height: 20px;
             fill: $white;
